--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.2",
+    "mongodb": "^2.2.30",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "normalize.css": "^7.0.0"
   }
 }
